Fixing missing Español

--- a/español.html
+++ b/español.html
@@ -50,11 +50,11 @@
             <form>
                 <div class="mb-3">
                     <label for="customer_name" class="form-label">Nombre</label>
-                    <input type="text" class="form-control" id="customer_name" placeholder="Jane Doe">
+                    <input type="text" class="form-control" id="customer_name" placeholder="Maria Pérez">
                 </div>
                 <div class="mb-3">
                     <label for="customer_email" class="form-label">Correo Electrónico</label>
-                    <input type="email" class="form-control" id="customer_email" placeholder="name@example.com">
+                    <input type="email" class="form-control" id="customer_email" placeholder="nombre@example.com">
                 </div>
                 <div class="mb-3">
                     <label for="customer_phone" class="form-label">Número de teléfono</label>
@@ -65,7 +65,7 @@
                     <textarea class="form-control" id="comments" rows="3"></textarea>
                 </div>
                 <div class="mb-3">
-                    <button class="btn btn-primary">Submit</button>
+                    <button class="btn btn-primary">Entregar</button>
                 </div>
             </form>
         </section>
