--- a/español.html
+++ b/español.html
@@ -20,7 +20,7 @@
     <div class="vulture_security">
         <section>
             <div class="intro">
-                <img src="imgs/vulture_logo.png" class="title">
+                <img src="imgs/vulture_logo.png" class="img-fluid">
             </div>
         </section>
         <div id="vulture_security"></div>
